# agent-workflow-suite

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/prds/01-screen-recording-analyzer/: prd-screen-recording-workflow-analyzer.md
docs/prds/01-screen-recording-analyzer/assets/: architecture-overview.md  data-flow-pipeline.md  implementation-phases.md  multi-agent-workflow.md
docs/prds/02-workflow-execution-agent/: prd-ai-workflow-execution-agent.md
docs/prds/02-workflow-execution-agent/assets/: callback-flow-diagram.md  execution-workflow.md  qa-validation-sequence.md  system-architecture.md
exports/html/: README.html  awea-architecture.html  awea-prd.html  srwa-architecture.html  srwa-prd.html
src/agent_workflow_suite/: __init__.py
src/agent_workflow_suite/core/agents/nl_transcription/: agent.py  models.py
src/agent_workflow_suite/core/agents/playwright_transcription/: __init__.py  agent.py  models.py
src/agent_workflow_suite/core/agents/sop_markdown/: __init__.py  agent.py  models.py
src/agent_workflow_suite/core/agents/transcription/: agent.py
src/agent_workflow_suite/core/agents/video_analyzer/: agent.py
src/agent_workflow_suite/core/agents/worker/: agent.py  prompts.py
