[project]
name = "agent-workflow-suite"
version = "0.1.0"
description = "Enterprise AI-Powered Browser Workflow Automation Suite"
readme = "README.md"
authors = [
    { name = "Alberto-Codes", email = "94092485+Alberto-Codes@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []
license = {text = "License TBD"}

[project.scripts]
agent-workflow-suite = "agent_workflow_suite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["agent_workflow_suite"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.hatch.envs.default.scripts]
# Add project-specific scripts here, e.g.:
# download-db = "python scripts/run_download_db.py"
